FIX github on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -70,6 +70,9 @@ a:hover {
     margin-top: 100px;
   }
 }
+.center{
+	text-align: center;
+}
 nav {
   position: fixed !important;
   top: 0px;
@@ -116,7 +119,6 @@ nav {
 .navbar-collapse .navbar-brand {
   margin-left: 0px;
 }
-
 .navbar .dropdown-menu {
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.05), 0 0 20px 0 rgba(0, 0, 0, 0.15);
   border: none;
@@ -239,6 +241,11 @@ section.sectionWithScreen {
 #landing .customers .styles_root__5JE_m{
 	margin:0px;
 	margin-right : 24px;
+  display: inline-block;
+  font-family: inherit;
+}
+#landing .customers.center .styles_root__5JE_m{
+	margin: 12px 12px;
   display: inline-block;
   font-family: inherit;
 }
